[gd_scene load_steps=3 format=3 uid="uid://jxdcv46jpys8"]

[ext_resource type="Script" uid="uid://c6m5pmbh7nc65" path="res://src/scripts/exercises/multiplayer_fill_in_the_blanks.gd" id="1"]
[ext_resource type="Theme" uid="uid://ch3x2byuiyaxy" path="res://src/assets/themes/menu.tres" id="2_1id0d"]

[node name="MultiplayerFillInTheBlank" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="QuestionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 495.0
offset_top = 119.0
offset_right = 654.0
offset_bottom = 169.0
theme_override_font_sizes/font_size = 36
text = "Question"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 548.0
offset_top = 238.0
offset_right = 597.0
offset_bottom = 261.0
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -33.0
offset_right = 77.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_1id0d")
alignment = 1

[node name="Button1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_1id0d")
text = "Option 1"
flat = true

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Option 2"
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_1id0d")
alignment = 1

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Option 3"
flat = true

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Option 4"
flat = true

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 119.0
offset_top = 466.0
offset_right = 175.0
offset_bottom = 489.0
text = "Results"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="PartnerAnswerLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 490.0
offset_top = 543.0
offset_right = 648.0
offset_bottom = 566.0
text = "PartnerAnswerLabel"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button4" to="." method="_on_button_4_pressed"]
